--- a/src/HTMLcomponents/cssComponent/decorate.css
+++ b/src/HTMLcomponents/cssComponent/decorate.css
@@ -419,14 +419,63 @@ ol {
 	color:black;
 	font-weight: bold;
 }
+@media only screen and (max-width: 768px) {
+	.nav-menu.active {
+        left: 0;
+    }
 
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+.nav-menu {
+	position: fixed;
+	left: -100%;
+	top: 5rem;
+	flex-direction: column;
+	background-color: #fff;
+	width: 100%;
+	border-radius: 10px;
+	text-align: center;
+	transition: 0.3s;
+	box-shadow:
+		0 10px 27px rgba(0, 0, 0, 0.05);
+}
+.hamburger.active .bar:nth-child(2) {
+	opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+	transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+	transform: translateY(-8px) rotate(-45deg);
+}
+}
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #101010;
+}
 .main-nav{
-	padding-left: 50px;
+
 	color:black;
 	font-weight: bold;
 }
 .main-nav-active{
-	color: red;
+	color: rgb(26, 87, 219);
+	text-decoration: underline;
+	width:100%;
+	height: 100%;
 	list-style: none;
 	position: relative;
 }
@@ -1387,7 +1436,7 @@ ol {
 	color: #404040;
 	font-size: 13px;
 	font-weight: 700;
-	background: #f1f5f8;
+	background: #2e70a3;
 	padding: 5px 18px;
 	display: inline-block;
 	text-transform: uppercase;
