--- a/src/HTMLcomponents/cssComponent/decorate.css
+++ b/src/HTMLcomponents/cssComponent/decorate.css
@@ -613,7 +613,7 @@ ol {
 }
 
 .hero__text h6 {
-	color: #e53637;
+	color: rgb(197, 84, 18);
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -624,7 +624,7 @@ ol {
 
 
 .hero__text h2 {
-	color: #111111;
+	color: hsl(22, 30%, 12%);
 	font-size: 48px;
 	font-weight: 700;
 	line-height: 58px;
@@ -635,6 +635,7 @@ ol {
 }
 
 .hero__text p {
+	color: #8f7060;
 	font-size: 16px;
 	line-height: 28px;
 	margin-bottom: 35px;
